[package]
name = "elm-dedup-project"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread"] }
