[package]
name = "elm-dedup-project"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
colored = "2.1.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
rayon = "1.10.0"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
wait-timeout = "0.2.1"
